css/style.css
/* ... */
@media (max-width: 650px) {

    div.container {
        max-width: 650px;
        margin: 0 auto;
    }

    section#banner,
    section#wall,
    section#team,
    section#contact {
        padding: 1rem;
    }

    h2 {
        color: #fff;
        font-size: 2.5rem;
    }

    #team .block .blockDescription p,
    #contact .block p {
        font-size: 1.2rem;
    }

    .sub {
        font-size: 2.5rem;
    }

    /*  */
    #header .nav {
        grid-column: 1/5;
    }

    #header .nav a {
        font-size: 1.1em;
    }

    #header .nav.active {
        grid-column: 1/5;
        height: auto;
    }

    #header .nav.active a {
        margin-bottom: 1.2rem;
        font-size: 1.2em;
    }

    /*  */
    #banner .content .title {
        font-size: 3.5rem;
    }

    #banner .content p {
        font-size: 2rem;
    }

    /* *** */
    #wall h2 {
        margin-bottom: 25px;
    }

    #wall .thumbnail {
        grid-template-columns: 1fr;
        grid-template-rows: repeat(12, 250px);
    }

    #wall .thumbnail .thumb {
        width: 80%;
    }

    #wall .button-block .button {
        font-size: 1.3rem;
        padding: 5px 45px 7px;
    }

    /*  */
    #team .team .card {
        width: 70%;
    }

    #team div.team {
        margin-top: -28rem;
    }

    /*  */
    #contact form button {
        margin-top: 1rem;
        font-size: 1.3em;
        border: 1px solid white;
        padding: 2px 35px 5px;
    }

    /*  */
    #footer {
        padding-top: 3rem;
        margin-top: 2rem;
    }
}


@media (max-width: 550px) {
    #team div.team {
        margin-top: -26rem;
    }

    #team .team .card {
        width: 100%;
    }

    #team .card .card-content {
        padding: 1rem;
    }

    /*  */
    #footer .block h3 {
        font-size: 1.2rem;
    }

    #footer .block p {
        font-size: 1.2rem;
    }

    #footer .block .love {
        font-size: 0.9rem;
    }

}

@media (max-width: 550px) {

    section#banner, section#wall, section#team, section#contact {
        padding: 0.5rem;
    }

    /*****/
    #header {
        grid-template-columns: 1fr 1fr;
    }
    #header a.logo {
        grid-column: 1/2;
        font-size: 1.2rem;
        margin-left: 10px;
    }
    #header .burgerToggle {
        grid-column: 2/3;
        margin: auto;
        margin-right: 0;
    }
    #header .burgerToggle.active {
        margin: auto;
        margin-right: 0;
    }
    #header .nav.active {
        grid-column: 1/3;
        height: auto;
    }
    #header .nav.active a {
        margin-bottom: 0.7rem;
        font-size: 1rem;
    }

    /*****/
    #banner .content {
        transform: translateY(0%);
    }
    #banner .content .title {
        font-size: 2.5rem;
    }
    #banner .content p {
        font-size: 1.7rem;
    }

    /*****/
    #footer {
        padding: 0;
        margin-top: 2rem;
    }
    #footer .block {
        padding: 1rem 0;
    }
    #footer .social {
        margin: 2rem 0;
    }
}
/* ... */

